Modulo produtos e categorias criados com sua documentação e testes
